<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragment.MonProfilFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp">

                <TextView
                    android:id="@+id/nom_patient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nom"/>

                <TextView
                    android:id="@+id/prenom_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/sexe_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexe"
                    android:layout_marginTop="46sp"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilemail"
                    android:layout_marginTop="48sp"/>

                <TextView
                    android:id="@+id/telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/date_naissancep_atient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profildatedenaissance"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/adresse_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/code_postal_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/codepostal"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/ville_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ville"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/adresse_postale_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adressepostale"
                    android:layout_marginTop="42sp"/>

                <TextView
                    android:id="@+id/contact_urgence_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacturgence"
                    android:layout_marginTop="42sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/rentrer_nom_monProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_prenom_monProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/rentrer_feminin_monProfil"
                        android:layout_width="120dp"
                        android:layout_height="70dp"
                        android:text="@string/feminin"
                        android:background="@drawable/rectbleu"/>

                    <Button
                        android:id="@+id/rentrer_masculin_monProfil"
                        android:layout_width="120dp"
                        android:layout_height="70dp"
                        android:text="@string/masculin"
                        android:background="@drawable/rectbleu"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/rentrer_email_monProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_telephone_monProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_date_naissance_monProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_adresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_code_postal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/rentrer_ville"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_adresse_postale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"/>

                <EditText
                    android:id="@+id/rentrer_contact_urgence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectbleu"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"/>

            </LinearLayout>

        </LinearLayout>

            <Button
                android:id="@+id/bouton_enregistrer_monProfil"
                android:layout_width="162dp"
                android:layout_height="40dp"
                android:layout_marginTop="700dp"
                android:layout_marginStart="235dp"
                android:background="@drawable/rectanglejaune"
                android:text="@string/enregistrer" />

            <TextView
                android:id="@+id/modifier_mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modifiermdp"
                android:layout_marginTop="695dp"
                android:layout_marginStart="10dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/supp_compte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suppcompte"
                android:layout_marginTop="720dp"
                android:layout_marginStart="10dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/deconnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deconnexion"
                android:layout_marginTop="745dp"
                android:layout_marginStart="10dp"
                android:textStyle="italic"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>