<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonSuivi">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/départ"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/editText1"
        android:ems="10"
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectanglebleu"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/actuel"
        android:layout_marginStart="28dp"
        android:layout_marginTop="250dp"/>

    <EditText
        android:id="@+id/editText2"
        android:ems="10"
        android:inputType="date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectanglebleu"
        android:layout_marginStart="10dp"
        android:layout_marginTop="275dp"/>

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90sp"
        android:layout_marginHorizontal="25sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50sp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greybis"
                android:padding="20sp"
                android:text="@string/poidsdepart"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greybis"
                android:padding="20sp"
                android:text="@string/ttdepart"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectanglejaune"
                android:padding="20sp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectanglejaune"
                android:padding="20sp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </TableRow>

    </TableLayout>

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340sp"
        android:layout_marginHorizontal="45sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greybis"
                android:padding="20sp"
                android:text="@string/poidsactuel"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greybis"
                android:padding="20sp"
                android:text="@string/ttactuel"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectanglejaune"
                android:padding="20sp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectanglejaune"
                android:padding="20sp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/carregris"
        android:layout_marginTop="500dp">

        <TextView
            android:id="@+id/textView26"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tailleactuelle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="110dp"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:text="@string/votreimc" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="45dp"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="256dp"
            android:layout_height="107dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="65dp"
            android:src="@drawable/echelleimc" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echellenbre"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="145dp"/>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echellenbre2"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="145dp"/>

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echellenbre3"
            android:layout_marginLeft="219dp"
            android:layout_marginTop="145dp"/>

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/echellenbre4"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="145dp"/>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maigreur"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="160dp"/>

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="160dp"/>

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surpoids"
            android:layout_marginLeft="214dp"
            android:layout_marginTop="160dp"/>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obésité"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="160dp"/>

    </RelativeLayout>


</FrameLayout>